# jetbrains_django_tailwind_no_completion_demo

./: manage.py  pyproject.toml
foo_app/templates/: foo_template.html
jetbrains_django_tailwind_no_completion_demo/: asgi.py  settings.py  urls.py  wsgi.py
