[tool.poetry]
name = "jetbrains_django_tailwind_no_completion_demo"
version = "0.1.0"
description = ""
authors = ["Dustin Wyatt <dustin.wyatt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
django-tailwind = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
